# embedded_kafka

./: .README.md.swp  .gitignore  CMakeLists.txt  README.md  UDP_socket_server  UDP_socket_server.cpp  UDP_socket_server_thread  UDP_socket_server_thread.cpp  file.map  linker.cmd  server.cpp  socket_client  socket_client.cpp  socket_server  socket_server.cpp  toolchain-linux-arm.cmake
Prove/: Communication.hpp  Destination.hpp  Logger.hpp  MyChildClass.cpp  MyChildClass.hpp  MyClass.cpp  MyClass.hpp  Server.hpp  StandardOutputLogger.cpp  StandardOutputLogger.hpp  UDPDestination.cpp  UDPDestination.hpp  UDPSocketCommunication.cpp  UDPSocketCommunication.hpp  UDPSocketServer.cpp  UDPSocketServer.hpp  client  client.cpp  main.cpp  myprogram  prova  prova.cpp  server  server.cpp
apps/: CMakeLists.txt  broker.cpp  configurer.cpp  consumer.cpp  consumerAndProducerTesting.cpp  printerService.cpp  producer.cpp  rpmsg_char_simple.cpp
apps/Brokers/: CMakeLists.txt  brokerPC.cpp
apps/Configurers/: CMakeLists.txt  configurerLinux.cpp  configurerPC.cpp
apps/Consumers/: CMakeLists.txt  consumerOutputFile.cpp  linuxConsumerBrokerTesting.cpp  processAndProduce.cpp  watcher.cpp
apps/Producers/: CMakeLists.txt  linuxProducerBrokerRTOS.cpp  linuxProducerNoConsumerTesting.cpp  periodicProducer.cpp
apps/Utils/: CMakeLists.txt  change_firmware.sh  directCommunicationTesting.cpp  launchMessage.cpp
build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake
build_linux/apps/: Makefile  broker  cmake_install.cmake  configurer  consumer  producer
build_linux/apps/Brokers/: Makefile  brokerPC  cmake_install.cmake
build_linux/apps/Configurers/: Makefile  cmake_install.cmake  configurerLinux  configurerPC
build_linux/apps/Consumers/: Makefile  cmake_install.cmake  consumerOutputFile  processAndProduce  watcher
build_linux/apps/Producers/: Makefile  cmake_install.cmake  periodicProducer
build_linux/src/: Makefile  cmake_install.cmake
build_linux/src/Application/: Makefile  cmake_install.cmake
build_linux/src/Communication/: Makefile  cmake_install.cmake
build_linux/src/Diagnostic/: Makefile  cmake_install.cmake
build_linux/src/Domain/: Makefile  cmake_install.cmake
build_linux/src/TopicManager/: Makefile  cmake_install.cmake
build_linux/src/utils/: Makefile  cmake_install.cmake
docs/: IPC_Communication.hpp  PlatformDependentMetadata.cpp  PlatformDependentMetadata.hpp  TopicLocal.cpp  TopicLocal.hpp  UDPSocketMetadata.cpp  UDPSocketMetadata.hpp
include/Application/: Broker.hpp  Configurer.hpp  Consumer.hpp  Producer.hpp
include/Communication/: CommunicationUtils.hpp  IPCNotifyCommunication.hpp  RPMessageCommunication.hpp  RPMessageLinuxCommunication.hpp  UDPSocketCommunication.hpp  lwipCommunicsation.hpp
include/Diagnostic/: Diagnostic.hpp  LatencyDiagnostic.hpp
include/Domain/: BrokerMetadata.hpp  ClientMetadata.hpp  ClusterMetadata.hpp  CommunicationType.hpp  ConsumerMetadata.hpp  EndpointFactory.hpp  IPCNotifyEndpoint.hpp  Processor.hpp  ProducerMetadata.hpp  RPMessageEndpoint.hpp  TopicMetadata.hpp  UDPEndpoint.hpp
include/TopicManager/: Message.hpp  RealTopic.hpp  Record.hpp  SystemManager.hpp  Topic.hpp  TopicFactory.hpp  TopicHandler.hpp  TopicProxy.hpp
include/utils/: JsonUtils.hpp  Logger.hpp
lib/Application/interfaces/: Broker.hpp  BrokerLinux.hpp  Configurer.hpp  Consumer.hpp  Producer.hpp
lib/Application/src/: Broker.cpp  BrokerLinux.cpp  Configurer.cpp  Consumer.cpp  Producer.cpp
lib/Communication/: helloworld
lib/Communication/docs/: Communication.md  UnixSocketCommunication.hpp
lib/Communication/interfaces/: Communication.hpp  CommunicationFactory.hpp  CommunicationType.hpp  Endpoint.hpp  EndpointFactory.hpp  Processor.hpp  RPMessageCommunication.hpp  RPMessageEndpoint.hpp  RPMessageLinuxCommunication.hpp  UDPDestination.hpp  UDPEndpoint.hpp  UDPSocketClientSupport.hpp  UDPSocketCommunication.hpp  UDPSocketServer.hpp  UnixSocketCommunication.hpp
lib/Communication/src/: CommunicationFactory.cpp  EndpointFactory.cpp  RPMessageCommunication.cpp  RPMessageEndpoint.cpp  RPMessageLinuxCommunication.cpp  (+6 more)
lib/Domain/: AM64Metadata.hpp  BrokerMetadata.hpp  ClusterMetadata.hpp  ConsumerMetadata.hpp  LinuxMetadata.hpp  PartitionMetadata.hpp  PlatformDependentMetadata.hpp  TopicMetadata.hpp
node_server/: app.js  names.json  package-lock.json  package.json  socketApi.js  topics.js  topics.json
node_server/monitor/: Measurement.txt  topics.txt
node_server/node_express_generator/: package-lock.json  package.json
node_server/routes/: createTopic.js  createTopics.js  home.js  index.js  menu.js  processors.js  topicForm.js  topicsPage.js
node_server/views/: createTopic.handlebars  created_topic.hbs  index.handlebars  index.hbs  index.html  menu.hbs  processorsPage.handlebars  topic_form.hbs  topics.hbs  topics_page.handlebars  topics_page.hbs  webSocketProva.hbs
scripts/: create_topics_file.sh  helping.sh  kill_system.sh  launch_brokers.sh  start_system.sh
src/: CMakeLists.txt  UnixSocketCommunication.cpp  UnixSocketCommunication.hpp  broker.cpp  clusterJsonGenerator.cpp  configurer.cpp  consumer.cpp  main.cpp  producer.cpp  prova.cpp  rpmsg_char_simple.c  rpmsg_char_simple.cpp  rpmsg_char_simple_original.c
src/Application/: Broker.cpp  CMakeLists.txt  Configurer.cpp  Consumer.cpp  Producer.cpp
src/Communication/: CMakeLists.txt  CommunicationUtils.cpp  IPCNotifyCommunication.cpp  RPMessageCommunication.cpp  RPMessageLinuxCommunication.cpp  UDPSocketCommunication.cpp  lwipCommunication.cpp
src/Diagnostic/: CMakeLists.txt
src/Domain/: BrokerMetadata.cpp  CMakeLists.txt  ClientMetadata.cpp  ConsumerMetadata.cpp  EndpointFactory.cpp  IPCNotifyEndpoint.cpp  RPMessageEndpoint.cpp  TopicMetadata.cpp  UDPEndpoint.cpp
src/TopicManager/: CMakeLists.txt  Message.cpp  ProducerRecord.cpp  RealTopic.cpp  Record.cpp  SystemManager.cpp  Topic.cpp  TopicFactory.cpp  TopicHandler.cpp  TopicProxy.cpp
src/utils/: CMakeLists.txt  JsonUtils.cpp  Logger.cpp  StandardOutputLogger.cpp  TI_DebugLogger.cpp
tools/: Makefile  Makefile2  create_brokers.sh
(+66 files in other folders)
